<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bikeko</string>
    <string name="explore">Explore</string>
    <string name="grid">Grid</string>
    <string name="favourites">Favourite(s)</string>

    <string name="settings">Settings</string>
    <string name="push_notif">Push Notifications</string>
    <string name="email_notif">Email Notifications</string>
    <string name="tnc">Terms &amp; Conditions</string>


    <string name="sign_in">Sign in</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="forget_pwd">Forgot Password?</string>
    <string name="sign_up">New here? Sign up</string>

    <string-array name="currency">
        <item>USD</item>
        <item>EUR</item>
    </string-array>

    <string name="email1">Email</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="checkout">Checkout</string>

    <!-- Start Do not translate -->
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="title_activity_choices">ChoicesActivity</string>

    <!-- facebook key -->
    <string name="facebook_app_id">638132053058512</string>


    <!--Preference keys -->
    <string name="uza_keys">uza_keys</string>
    <string name="uza_currency">uza_currency</string>
    <string name="uza_currency_position">uza_currency_position</string>

    <!-- Intents name -->
    <string name="choice">choice</string>

    <!-- End  Do not translate -->
    <string name="phone_number">Phone Number</string>


    <string name="quantity">Quantity</string>
    <string name="RemoveCommand">Would you really remove this article from the cart?</string>

    <string name="item_in_the_cart">Item in the cart</string>

    <string name="checkout_quantity">Quantity</string>
    <string name="checkout_size">Size</string>
    <string name="checkout_color">Color</string>
    <string name="checkout_price">Price</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="books">Books</string>

    <!-- Books content -->
    <string name="all">All</string>
    <string name="sciences">Sciences</string>
    <string name="languages">Languages</string>
    <string name="fiction">Fiction</string>
    <string name="history">History</string>
    <string name="geography">Geography</string>
    <string name="comic_strip">Comic strip</string>
    <string name="kids">Kids</string>

    <!-- Payment content -->
    <string name="credit_card">Credit card</string>
    <string name="cash">Cash</string>
    <string name="mobile_money">Mobile money</string>

    <!-- Electronics content -->
    <string name="home">Home</string>
    <string name="video_game">Video games</string>
    <string name="phones_accesories">Phones  &amp; Accessories</string>
    <string name="computers_tablets">Computers  &amp; Tablets</string>

    <!-- choices -->
    <string name="choices">choices</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="electronic">Electronic</string>
    <string name="clothing">Clothing</string>
    <string name="shoes_bags"><![CDATA[Shoes & Bags]]></string>
    <string name="watches_accessories"><![CDATA[Watches & Accessories]]></string>
    <string name="perfumes_beauty"><![CDATA[Perfumes & Beauty]]></string>
    <string name="toys_accessories"><![CDATA[Toys & Accessories]]></string>
    <string name="bathing_skincare"><![CDATA[Bathing  & Skin care]]></string>
    <string name="colors">Colors</string>
    <string name="sizes">Sizes</string>
    <string name="enter_your_comment_here">Enter your comment here</string>
    <string name="total">TOTAL</string>
    <string name="complete_purchase">Complete Purchase</string>
    <string name="order_amount">Order Amount</string>
    <string name="shipping_cost">Shipping cost</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="required">Required</string>
    <string name="password_not_equal">Entered passwords are not equal</string>
    <string name="secure_payement">Secure payment (USD)</string>
    <string name="payement">Payment</string>
    <string name="payment_mthod">Payment method</string>
    <string name="failed_to_get_token">Application failed to get a payment token. Please check your internet connection</string>
    <string name="pay">Pay</string>
    <string name="fail_to_contact_payment_server">Application fails to contact payment server. Please check your network connection</string>
    <string name="please_wait">Please wait...</string>
    <string name="transaction_rejected">Transaction rejected !</string>
    <string name="commands">Commands</string>
    <string name="action_commands">Commands</string>

    <!-- Provider -->
    <string name="content_authority">com.kisita.uza</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="command_details">Command details</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyBRrg6VtkuBk9gwrvxRmkkQEJs0_5D7ATQ
    </string>
    <string name="command_id">ID #</string>
    <string name="command_state">State</string>
    <string name="command_transporter">Transporter</string>
    <string name="command_contact">Contact</string>
    <string name="none">None</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_filters">Filters</string>
    <string name="title_notifications">Notifications</string>
    <string name="cart">Cart</string>
    <string name="literature">Literature</string>
    <string name="textile">Textile</string>
    <string name="sculpture">Sculpture</string>
    <string name="photography">Photography</string>
    <string name="painting">Painting</string>
    <string name="categories">Categories</string>
    <string name="drawing">Drawing</string>
    <string name="currency">Currency</string>
    <string name="price_range">Price range</string>
    <string name="painting_key">Painting</string>
    <string name="photography_key">Photography</string>
    <string name="drawing_key">Drawing</string>
    <string name="sculpture_key">Sculpture</string>
    <string name="textile_key">Textile</string>
    <string name="literature_key">Literature</string>
    <string name="artist">Artist</string>
    <string name="share">Share</string>
    <string name="content_shared">Content shared</string>
    <string name="uza_store_link">https://play.google.com/store/apps/details?id=com.kisita.uza</string>
    <string name="title_user">User</string>
    <string name="euros">EUR</string>
    <string name="billing_information">Billing Information</string>
    <string name="about_us">About us</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="unspecified_resource">Unspecified</string>
    <string name="price_init_value">0</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logout">Log out of</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state_province">State / Province</string>
    <string name="postal_code">Zip / Postal Code</string>
    <string name="country">Country</string>
    <string name="save_information">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uza_billing_name">uza_billing_name</string>
    <string name="uza_billing_phone">uza_billing_phone</string>
    <string name="uza_billing_address">uza_billing_address</string>
    <string name="uza_billing_city">uza_billing_city</string>
    <string name="uza_billing_state_province">uza_billing_state_province</string>
    <string name="uza_billing_postal_code">uza_billing_postal_code</string>
    <string name="uza_billing_country">uza_billing_country</string>
    <string name="first_name">First name</string>
    <string name="uza_billing_first_name">uza_billing_first_name</string>
    <string name="select_currency">Select currency</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="email_verification">Verification email sent to</string>
    <string name="send_verification_fail">Failed to send verification email.</string>
    <string name="hello">Hello</string>
    <string name="selecte_a_country">Click here to select a country</string>
    <string name="paypal_billing_agreement">Billing Agreement</string>
    <string name="loading">Loading...</string>
    <string name="transaction_failed">Transaction failed</string>
    <string name="transaction_complete">Transaction complete</string>
    <string name="command_current_state">Command state</string>
    <string name="send_logs">Send logs</string>
    <string name="the_command_state">The command state</string>
    <string name="ok">OK</string>
    <string name="Billing_info_missing">Some billing info are missing</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="Billing_info_saved">Billing information saved</string>
    <string name="item_removed">Item removed</string>
    <string name="remove_item">Do you really want to remove this item from the cart ?</string>
    <string name="artists">Artists</string>
    <string name="artworks">Artworks</string>
    <string name="art_africain_contemporain">Art africain contemporain</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>