<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/bikeko_home_black_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_new_item"
            android:icon="@drawable/bikeko_add_shopping_cart_black_24dp"
            android:title="@string/cart" />

        <item
            android:id="@+id/nav_new_artist"
            android:icon="@drawable/anonymous_user"
            android:title="@string/new_artist" />


        <item
            android:id="@+id/nav_commands"
            android:icon="@drawable/bikeko_cart_black_24dp"
            android:title="@string/commands" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_filters" />

        <item
            android:id="@+id/nav_email"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/send_logs" />
    </group>

    <item android:title="@string/title_user">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/bikeko_logout_black_24dp"
                android:title="@string/action_logout" />
        </menu>
    </item>

</menu>
