<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_tune"
        android:icon="@drawable/ic_action_tune"
        android:title="@string/title_filters" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_action_cart"
        android:title="@string/cart" />


    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_action_favorite"
        android:title="@string/favourites" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
