<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/pad_10dp"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/pad_30dp"
    android:paddingRight="@dimen/pad_30dp"
    android:weightSum="1"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/field_first_name"
        style="@style/edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/first_name" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/field_name"
        style="@style/edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name" >
    </EditText>

    <EditText
        android:id="@+id/field_number"
        style="@style/edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone_number" >
    </EditText>

    <EditText
        android:id="@+id/field_address"
        style="@style/edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:maxLines="5"
        android:hint="@string/address" >
    </EditText>

    <EditText
        android:id="@+id/field_city"
        style="@style/edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/city">
    </EditText>

    <EditText
        android:id="@+id/field_state_province"
        style="@style/edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/state_province">
    </EditText>

    <EditText
        android:id="@+id/field_postal_code"
        style="@style/edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/postal_code">
    </EditText>

    <Button
        android:id="@+id/field_country"
        style="@style/uza_billing_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/country">
    </Button>
    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/pad_30dp"/>

    <Button
        android:id="@+id/button_confirm"
        style="@style/uza_button_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_information" />
</LinearLayout>
