<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_action_cart"
        android:title="@string/grid"
        app:showAsAction="always" />
    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_action_favorite"
        android:title="@string/grid"
        app:showAsAction="always" />

    <!--<item
        android:id="@+id/action_store"
        android:icon="@drawable/ic_store_black_24dp"
        android:title="@string/store"
        app:showAsAction="always" />-->

    <item
        android:id="@+id/action_explore"
        android:title="@string/explore"
        android:orderInCategory="100"
        app:showAsAction="never" />

	<!--<item TODO search engine
        android:id="@+id/action_search"
        android:icon="@drawable/icon_search"
        app:showAsAction="never"
        android:title="@string/search"
        android:actionViewClass="android.widget.SearchView"
        />-->

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_commands"
        android:title="@string/action_commands"
        android:orderInCategory="100"
        app:showAsAction="never" />
	
</menu>