<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rsb="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/pad_60dp"
        rsb:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:padding="@dimen/pad_10dp"
                rsb:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/uza_lineto_text_style_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/categories"
                        android:layout_marginBottom="@dimen/pad_10dp"/>

                        <!--Visual Art-->
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/uza_settings_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBaseline="@+id/item_painting"
                                android:layout_alignParentStart="true"
                                android:text="@string/painting" />

                            <Switch
                                android:id="@+id/item_painting"
                                style="@style/uza_settings_switch"
                                 />
                        </RelativeLayout>
                        <!--*************************************-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/uza_settings_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/item_photography"
                            android:layout_alignParentStart="true"
                            android:text="@string/photography" />

                        <Switch
                            android:id="@+id/item_photography"
                            style="@style/uza_settings_switch"
                            />
                    </RelativeLayout>
                        <!--*************************************-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/uza_settings_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/item_drawing"
                            android:layout_alignParentStart="true"
                            android:text="@string/drawing" />

                        <Switch
                            android:id="@+id/item_drawing"
                            style="@style/uza_settings_switch"
                            />
                    </RelativeLayout>
                        <!--*************************************-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/uza_settings_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/item_sculpture"
                            android:layout_alignParentStart="true"
                            android:text="@string/sculpture" />

                        <Switch
                            android:id="@+id/item_sculpture"
                            style="@style/uza_settings_switch"
                            />
                    </RelativeLayout>
                        <!--*************************************-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/uza_settings_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/item_textile"
                            android:layout_alignParentStart="true"
                            android:text="@string/textile" />

                        <Switch
                            android:id="@+id/item_textile"
                            style="@style/uza_settings_switch"
                            />
                    </RelativeLayout>
                        <!--*************************************-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/uza_settings_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/item_litterature"
                            android:layout_alignParentStart="true"
                            android:text="@string/literature" />

                        <Switch
                            android:id="@+id/item_litterature"
                            style="@style/uza_settings_switch"
                            />
                    </RelativeLayout>
                </LinearLayout>
                <View
                    style="@style/uza_divider_style"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/uza_lineto_text_style_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_range"
                        android:layout_marginBottom="@dimen/pad_10dp"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:clipChildren="false">

                        <com.kisita.uza.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                            android:id="@+id/rangeSeekbar1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:bar_color="@color/main_grey_lt"
                            app:bar_highlight_color="@color/main_grey"
                            app:left_thumb_image="@drawable/ic_action_logo"
                            app:right_thumb_image="@drawable/ic_action_logo"/>

                        <TextView
                            android:id="@+id/textMin1"
                            style="@style/uza_lineto_text_style_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price_init_value"
                            android:layout_below="@id/rangeSeekbar1"
                            android:layout_marginTop="5dp"
                            android:layout_marginStart="10dp"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textMax1"
                            style="@style/uza_lineto_text_style_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price_init_value"
                            android:layout_below="@id/rangeSeekbar1"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:textSize="16sp"
                            android:layout_alignParentEnd="true"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
